<resources>
    <string name="app_name">Amanda</string>
    <string-array name="days">
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miércoles</item>
        <item>Jueves</item>
        <item>Viernes</item>
        <item>Sabado</item>
        <item>Domingo</item>
    </string-array>
    <!--Activities-->

    <!--Menu-->
    <string name="navigation_drawer_open">Nose1</string>
    <string name="navigation_drawer_close">Nose2</string>
    <string name="done">Listo</string>
    <string name="cancel">Cancelar</string>

    <!-- Login -->
    <string name="icon_description">Icono Amanda</string>
    <string name="login_text1">Bienvenido</string>
    <string name="login_text2">Organiza tu agenda universitaria con Amanda</string>
    <string name="login_button">Iniciar Sesión con Chairá</string>

    <!--Menu left-->
    <string name="activity">Actividades</string>
    <string name="diary">Agenda</string>
    <string name="pensum">Pensum</string>
    <string name="current_score">Notas Actuales</string>
    <string name="action_settings">Configuraciones</string>
    <string name="add_activity">Agregar Actividad</string>

    <!--Text add_activitys-->
    <string name="hint_name">Nombre</string>
    <string name="hint_place">Lugar</string>
    <string name="hint_day">Día</string>
    <string name="hint_hour">Hora</string>
    <string name="add_day">Agregar día</string>

    <!--Notifications-->

</resources>
