<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_activity"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/activity" />
        <item
            android:id="@+id/nav_diary"
            android:icon="@drawable/ic_event_black_24dp"
            android:title="@string/diary" />
        <item
            android:id="@+id/nav_current_score"
            android:icon="@drawable/ic_filter_5_black_24dp"
            android:title="@string/current_score" />
        <item
            android:id="@+id/nav_pensum"
            android:icon="@drawable/ic_timeline_black_24dp"
            android:title="@string/pensum" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings" />
    </group>

</menu>
